Change contact form to prevent submission from bots & made text align center in alert box

--- a/assets/css/parts/alert.css
+++ b/assets/css/parts/alert.css
@@ -8,6 +8,7 @@
   font-size: 1.4rem;
   font-weight: 800;
   box-shadow: 0 0 1.4rem rgba(0, 0, 0, 0.05);
+  text-align: center;
 }
 
 .msg-success {
